Fixed weird word wrapping issue with the page header

--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ html {
 }
 
 .content-header {
-  height: 65px;
+  /*height: 65px;*/
   line-height: 65px;
   font-family: 'Nunito', sans-serif;
   text-transform: lowercase;
